# imageresize

./: CMakeLists.txt  PreGraph.cpp  README.md  SLIC.cpp  SLIC.h  SeamCarver.cpp  SeamCarver.h  main.cpp
